--- a/bp-monitoring.html
+++ b/bp-monitoring.html
@@ -27,29 +27,17 @@
                     <i class="fas fa-home"></i>
                     <span>Dashboard</span>
                 </a>
-                <a href="teleconsultation.html" class="menu-item">
-                    <i class="fas fa-comment-medical"></i>
-                    <span>Teleconsultation</span>
-                </a>
                 <a href="bp-monitoring.html" class="menu-item active">
                     <i class="fas fa-heartbeat"></i>
                     <span>BP Monitoring</span>
                 </a>
-                <a href="medication.html" class="menu-item">
-                    <i class="fas fa-pills"></i>
-                    <span>Medication</span>
-                </a>
-                <a href="appointments.html" class="menu-item">
-                    <i class="fas fa-calendar-check"></i>
-                    <span>Appointments</span>
+                <a href="medical-services.html" class="menu-item">
+                    <i class="fas fa-stethoscope"></i>
+                    <span>Medical Services</span>
                 </a>
                 <a href="profile.html" class="menu-item">
                     <i class="fas fa-user"></i>
                     <span>Profile</span>
-                </a>
-                <a href="index.html" class="menu-item">
-                    <i class="fas fa-sign-out-alt"></i>
-                    <span>Logout</span>
                 </a>
             </div>
         </div>
