--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-card">
             <div class="auth-header">
-                <img src="https://via.placeholder.com/80x80.png?text=6SH" alt="Logo" class="auth-logo">
+                <img src="img/follow-up-logo.png" alt="Logo" class="auth-logo">
                 <h2>Six Sense Health</h2>
                 <p>A Comprehensive Follow-Up Platform For Hypertension</p>
                 
