--- a/medical-services.html
+++ b/medical-services.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="https://via.placeholder.com/40x40.png?text=6SH" alt="Logo">
+                    <img src="img/follow-up-logo.png" alt="Logo">
                     <span>Six Sense Health</span>
                 </div>
                 <button class="sidebar-toggle" onclick="toggleMenu()">
@@ -56,7 +56,7 @@
                     </div>
                     
                     <div class="user-avatar">
-                        <img src="https://via.placeholder.com/40x40.png?text=LN" alt="User Avatar">
+                        <img src="img/avatar.png" alt="User Avatar">
                     </div>
                     <span>Li Na</span>
                 </div>
@@ -82,7 +82,7 @@
                         <div class="available-doctors mt-4">
                             <h4>Available Doctors</h4>
                             <div class="doctor-card">
-                                <img src="https://via.placeholder.com/50x50.png?text=Dr" alt="Doctor">
+                                <img src="img/doctor-avatar.png" alt="Doctor">
                                 <div class="doctor-info">
                                     <h5>Dr. Wang Li</h5>
                                     <p>Cardiologist</p>
@@ -92,7 +92,7 @@
                             </div>
                             
                             <div class="doctor-card">
-                                <img src="https://via.placeholder.com/50x50.png?text=Dr" alt="Doctor">
+                                <img src="img/doctor-avatar.png" alt="Doctor">
                                 <div class="doctor-info">
                                     <h5>Dr. Zhang Wei</h5>
                                     <p>General Physician</p>
