--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="https://via.placeholder.com/40x40.png?text=6SH" alt="Logo">
+                    <img src="img/follow-up-logo.png" alt="Logo">
                     <span>Six Sense Health</span>
                 </div>
                 <button class="sidebar-toggle" onclick="toggleMenu()">
@@ -53,7 +53,7 @@
                     </div>
                     
                     <div class="user-avatar">
-                        <img src="https://via.placeholder.com/40x40.png?text=LN" alt="User Avatar">
+                        <img src="img/avatar.png" alt="User Avatar">
                     </div>
                     <span>Li Na</span>
                 </div>
@@ -69,7 +69,7 @@
                     <div class="card-body p-3">
                         <div style="display: flex; margin-bottom: 30px;">
                             <div style="width: 100px; height: 100px; border-radius: 50%; overflow: hidden; margin-right: 20px;">
-                                <img src="https://via.placeholder.com/100x100.png?text=LN" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;">
+                                <img src="img/avatar.png" alt="Profile Picture" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div>
                                 <h3 style="margin-bottom: 5px;">Li Na</h3>
