--- a/medication.html
+++ b/medication.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="https://via.placeholder.com/40x40.png?text=6SH" alt="Logo">
+                    <img src="img/follow-up-logo.png" alt="Logo">
                     <span>Six Sense Health</span>
                 </div>
                 <button class="sidebar-toggle" onclick="toggleMenu()">
@@ -65,7 +65,7 @@
                     </div>
                     
                     <div class="user-avatar">
-                        <img src="https://via.placeholder.com/40x40.png?text=LN" alt="User Avatar">
+                        <img src="img/avatar.png" alt="User Avatar">
                     </div>
                     <span>Li Na</span>
                 </div>
