--- a/teleconsultation.html
+++ b/teleconsultation.html
@@ -13,7 +13,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo">
-                    <img src="https://via.placeholder.com/40x40.png?text=6SH" alt="Logo">
+                    <img src="img/follow-up-logo.png" alt="Logo">
                     <span>Six Sense Health</span>
                 </div>
                 <button class="sidebar-toggle" onclick="toggleMenu()">
@@ -65,7 +65,7 @@
                     </div>
                     
                     <div class="user-avatar">
-                        <img src="https://via.placeholder.com/40x40.png?text=LN" alt="User Avatar">
+                        <img src="img/avatar.png" alt="User Avatar">
                     </div>
                     <span>Li Na</span>
                 </div>
@@ -77,8 +77,9 @@
                 <div class="chat-sidebar">
                     <!-- Doctor Profile -->
                     <div class="doctor-profile">
+
                         <div class="doctor-avatar">
-                            <img src="https://via.placeholder.com/80x80.png?text=Dr.W" alt="Doctor Avatar">
+                            <img src="img/doctor-avatar.png" alt="Doctor Avatar">
                         </div>
                         <div class="doctor-info">
                             <h3>Dr. Wang Li</h3>
